--- a/templates/about.html
+++ b/templates/about.html
@@ -28,6 +28,7 @@
                 <a class="dropdown-item" href="/comparisons">Popular v Electoral Vote</a>
                 <a class="dropdown-item" href="/timeline">Timeline</a>
                 <a class="dropdown-item" href="/votepower">Voting Power</a>
+                <a class="dropdown-item" href="/datatable">Election Data</a>
             </div>
           </li>
           <li class="nav-item">
@@ -71,6 +72,7 @@
   <br><a href="/api/v1.0/states" target="_blank">/api/v1.0/states</a>
   <br><a href="/api/v1.0/national" target="_blank">/api/v1.0/national</a>
   <br><a href="/api/v1.0/popular" target="_blank">/api/v1.0/popular</a>
+  <br><a href="/api/v1.0/table" target="_blank">/api/v1.0/table</a>
 </p>
 
 <p><strong>Resources</strong>
