--- a/templates/datatable.html
+++ b/templates/datatable.html
@@ -28,6 +28,7 @@
               <a class="dropdown-item" href="/comparisons">Popular v Electoral Vote</a>
               <a class="dropdown-item" href="/timeline">Timeline</a>
               <a class="dropdown-item" href="/votepower">Voting Power</a>
+              <a class="dropdown-item" href="/datatable">Election Data</a>
           </div>
         </li>
         <li class="nav-item">
@@ -42,13 +43,11 @@
         <div class="container-fluid bg-1 text-center">
           <!-- <h1>2020 U.S. Presidential Election</h1>      -->
           <p><img src="../static/Images/banner.png" style="width:800px;" alt="2020 Presidential Election Banner"></p> 
+          <p><h2>U.S. Presidential Election Statistics</h2></p>
         </div>
       </div>
 
   
-      <div class="hero text-center">
-        <h1>U.S. Presidential Election Statistics</h1>
-      </div>
       <div class="container">
         <div class="row margin-top-30">
           <div class="col-md-2">
