--- a/templates/index.html
+++ b/templates/index.html
@@ -28,6 +28,7 @@
                 <a class="dropdown-item" href="/comparisons">Popular v Electoral Vote</a>
                 <a class="dropdown-item" href="/timeline">Timeline</a>
                 <a class="dropdown-item" href="/votepower">Voting Power</a>
+                <a class="dropdown-item" href="/datatable">Election Data</a>
             </div>
           </li>
           <li class="nav-item">
@@ -50,20 +51,32 @@
       <div class="container-fluid text-center">    
         <h3>Election Trends</h3><br>
         <div class="row">
-          <div class="col-sm-4">
+          <div class="col-sm-6">
             <p><h4>Popular V Electoral Vote</h4></p>
+            <p>Compare how the Biden and Trump are expected to peform.</p>
             <a href="/comparisons">
                 <img src="../static/Images/Biden-Trump.jpg" class="img-responsive" style="width:75%" alt="Biden v Trump"></a>
           </div>
-          <div class="col-sm-4"> 
+          <div class="col-sm-6"> 
             <p><h4>Timeline</h4></p>
+            <p>How have voting trends changed leading up to election day?</p>
             <a href="/timeline"><img src="../static/Images/vote.jpg" class="img-responsive" style="width:75%" alt="Vote America"></a>
           </div>
-          <div class="col-sm-4"> 
+        </div>
+      </div>
+
+        <div class="container-fluid text-center">   
+        <div class="row">
+          <div class="col-sm-6"> 
+            <p><h4>Election Table</h4></p>
+            <p>Filter by state to see how the candidates are polling.</p>
+            <a href="/datatable"><img src="../static/Images/electoralcollege.jpg" class="img-responsive" style="width:75%" alt="Voting Power"></a>            
+          </div>
+          <div class="col-sm-6"> 
             <p><h4>Voting Power</h4></p>
+            <p>How much does your vote matter?</p>
             <a href="/votepower"><img src="../static/Images/votepower.jpg" class="img-responsive" style="width:75%" alt="Voting Power"></a>
           </div>
-          
         </div>
       </div>
       
