--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -28,6 +28,7 @@
               <a class="dropdown-item" href="/comparisons">Popular v Electoral Vote</a>
               <a class="dropdown-item" href="/timeline">Timeline</a>
               <a class="dropdown-item" href="/votepower">Voting Power</a>
+              <a class="dropdown-item" href="/datatable">Election Data</a>
           </div>
         </li>
         <li class="nav-item">
