change bootstrap table to dark for better visibility

--- a/templates/datatable.html
+++ b/templates/datatable.html
@@ -72,18 +72,18 @@
           </div>
           <div class="col-md-10">
             <div id="table-area" class="">
-              <table id="ufo-table" class="table table-striped">
+              <table id="election-table" class="table table-hover table-dark">
                 <thead>
                   <tr>
                     <th class="table-head">Margin</th>
                     <th class="table-head">Date</th>
                     <th class="table-head">State</th>
                     <th class="table-head">Tipping</th> 
-                    <th class="table-head">Vote share (Biden)</th>
-                    <th class="table-head">Vote share (Trump)</th>
+                    <th class="table-head">Vote Share (Biden)</th>
+                    <th class="table-head">Vote Share (Trump)</th>
                     <th class="table-head">Vote Power</th>
-                    <th class="table-head">Chance of winning (Biden)</th>
-                    <th class="table-head">Chance of winning (Trump)</th>
+                    <th class="table-head">Chance of Winning (Biden)</th>
+                    <th class="table-head">Chance of Winning (Trump)</th>
                     </tr>
                 </thead>
                 <tbody></tbody>
